Mon Jul 12 09:47:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.cpp:
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp:
        * connectors/dds4ccm/impl/ConditionManager_T.cpp:
        * connectors/dds4ccm/impl/ContentFilterSetting.cpp:
        * connectors/dds4ccm/impl/ContentFilteredTopic_T.cpp:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/DataReader_T.cpp:
        * connectors/dds4ccm/impl/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipantFactory_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipantManager.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.cpp:
        * connectors/dds4ccm/impl/Publisher_T.cpp:
        * connectors/dds4ccm/impl/QueryCondition_T.cpp:
        * connectors/dds4ccm/impl/ReadCondition_T.cpp:
        * connectors/dds4ccm/impl/StatusCondition.cpp:
        * connectors/dds4ccm/impl/Subscriber_T.cpp:
        * connectors/dds4ccm/impl/TopicDescription_T.cpp:
        * connectors/dds4ccm/impl/Topic_T.cpp:
        * connectors/dds4ccm/impl/Updater_T.cpp:
        * connectors/dds4ccm/impl/Writer_T.cpp:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/Latency_Receiver.cpp:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp: